# enpm702_fall2024

./: .gitignore  CMakeLists.txt  README.md
lecture1/: CMakeLists.txt
lecture1/doc/: Doxyfile  placeholder.txt
lecture1/docs/: Doxyfile
lecture1/docs/html/: dir_38930f07023e4606b76f3c10b18498d8.html  dir_4e81be25f232533ad82fb2c7dd90cc1b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_50f867ee22f8f6716f9233a0b07f87a9.html  dir_65c9f28aee3b812db4e6acac9cf02a13.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8b84b2e91dd3ee811e446dc56e26b318.html  dir_a73c14e4eb1ad4e7841aea97bcb9d6f9.html  dir_b66b7be67498fa56bed8724aa60f268b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_df95019d89c2d088adea6cb661cb5675.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  lecture1_8cpp.html  lecture1_8cpp.js  lecture1_8cpp__incl.map  lecture1_8cpp__incl.md5  lecture1_8hpp_source.html  navtreedata.js  navtreeindex0.js
lecture1/src/: lecture1  lecture1.cpp
lecture2/: CMakeLists.txt
lecture2/plantuml/: cin.plantuml
lecture2/src/: lecture2.cpp
lecture3/: CMakeLists.txt
lecture3/src/: lecture3.cpp
lecture4/: CMakeLists.txt
lecture5/: CMakeLists.txt  CMakePresets.json
my_vscode_files/: cout.code-snippets  extensions.json  settings copy.json  settings.json  snippet-keyboard-binding.txt
reading_material/: CMakeLists.txt
rm/: CMakeLists.txt
rm/plantuml/: if.plantuml  if_else.plantuml  if_else_if.plantuml  switch.plantuml  while_loop.plantuml
rm/src/: rm.cpp
(+5 files in other folders)
